test/types/sync/vass/ref-sync-5-ref.chpl
// Passing a sync variable to a single 'ref' formal.

var SVAR: sync int;

MYPROC(SVAR);

proc MYPROC(ref FORMAL: single int) { }
